[metadata]
name = b39tools
version = 0.1.0
author = github.com/sowbug
description = Tools for working with BIP-39 assets.

[options]
setup_requires = pbr>=2.0.0
install_requires =
    age
    base58
    mnemonic
    pycoin
    pysha3
    shamir-mnemonic
include_package_data = True

[options.package_data]
b39tools =
    docs/*.pdf
    docs/*.md

[options.entry_points]
console_scripts =
    create-bip39-account = b39tools.accountcreator:main
